# xenakisAnalogiqueGUI

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: main.c
